fix: overflow text

--- a/web/src/pages/schedule/styles.scss
+++ b/web/src/pages/schedule/styles.scss
@@ -7,36 +7,52 @@
     width: 15%;
     margin-bottom: 1%;
 }
+
 .filter {
       margin-left: 3%;
       margin-bottom: 1%;
       float: left;
       width: 15%;
 }
+
 .filter-show {
     margin-left: 10px;
 }
+
 .filter-hide {
     margin-left: 10px;
     margin-bottom: 1%;
 }
+
 .search-bar {
     float: right;
     margin-bottom: 1%;
     width: 15%;
 }
+
 .ant-slider-track{
     background-color: #272343 !important;
 }
+
 .ant-slider-rail {
     background-color: #e3f6f5!important;
 }
+
 .ant-slider-handle {
     background-color: #ffd803 !important;
 }
+
 .ant-select-selector {
     background-color: #bae8e8 !important;
 }
+
 thead[class*="ant-table-thead"] th{
     background-color: #bae8e8 !important;
 } 
+
+.ant-table-cell {
+    width: 100%;
+    overflow:hidden; 
+    white-space:nowrap; 
+    text-overflow: ellipsis;
+}
